minor css html changes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </p>
         </section>
         <div class ="ingredients">
-
+          <img id="textbox" src="img/list-bg.png">
         </div>
 
         <footer>
